--- a/Scaffolding.Application/Scaffolding.Application.csproj
+++ b/Scaffolding.Application/Scaffolding.Application.csproj
@@ -74,13 +74,9 @@
     <Compile Include="AutoMapper\AutoMapperConfiguration.cs" />
     <Compile Include="AutoMapper\ModelToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToModelMappingProfile.cs" />
-    <Compile Include="DataApplication\DataApplication.cs" />
-    <Compile Include="DataApplication\v1\DataApplication.Customer.cs" />
-    <Compile Include="DataApplication\v1\DataApplication.Category.cs" />
-    <Compile Include="DataApplication\v1\DataApplication.Authorize.cs" />
-    <Compile Include="DataApplication\v1\DataApplication.Product.cs" />
-    <Compile Include="DataApplication\v2\DataApplication.Category.cs" />
-    <Compile Include="DataApplication\v2\DataApplication.Product.cs" />
+    <Compile Include="DataApplication\Interfaces\IDataApplication.Authorize.cs" />
+    <Compile Include="DataApplication\_Implement\DataApplication.cs" />
+    <Compile Include="DataApplication\Services\DataApplication.Authorize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
