--- a/Scaffolding.Data/Scaffolding.Data.csproj
+++ b/Scaffolding.Data/Scaffolding.Data.csproj
@@ -63,12 +63,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BNNPROEntities.cs" />
+    <Compile Include="DBEntities.cs" />
     <Compile Include="DbInfrastructure\DbFactory.cs" />
-    <Compile Include="DbInfrastructure\DbHelper.cs" />
     <Compile Include="DbInfrastructure\Disposable.cs" />
-    <Compile Include="DbInfrastructure\EFUnitOfWork.cs" />
-    <Compile Include="DbInfrastructure\RepositoryBase.cs" />
     <Compile Include="EFConfiguration\addressConfiguration.cs" />
     <Compile Include="EFConfiguration\bankConfiguration.cs" />
     <Compile Include="EFConfiguration\bank_accountConfiguration.cs" />
@@ -95,9 +92,13 @@
     <Compile Include="EFConfiguration\symptomConfiguration.cs" />
     <Compile Include="EFConfiguration\userConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Data\ProductRepository.cs" />
-    <Compile Include="Repositories\Data\Promotion_imageRepository.cs" />
     <Compile Include="Repositories\Data\CategoryRepository.cs" />
+    <Compile Include="_BaseData\_EFUnitOfWork\Interfaces\IEFUnitOfWork.cs" />
+    <Compile Include="_BaseData\_EFUnitOfWork\Services\EFUnitOfWork.cs" />
+    <Compile Include="_BaseData\_Helper\Interfaces\IDBHelper.cs" />
+    <Compile Include="_BaseData\_Helper\Services\DBHelper.cs" />
+    <Compile Include="_BaseData\_RepositoryBase\Interfaces\IRepositoryBase.cs" />
+    <Compile Include="_BaseData\_RepositoryBase\Services\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
