--- a/Scaffolding.Api/ConnectionStrings.config
+++ b/Scaffolding.Api/ConnectionStrings.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
   <connectionStrings>
-    <add name="ScaffoldingEntities" connectionString="Data Source=49.0.64.14,18963;Initial Catalog=TH_Scaffolding;User ID=sa;Password=P@ssw0rd" providerName="System.Data.SqlClient" />
-    <add name="ScaffoldingLogEntities" connectionString="Data Source=49.0.64.14,18963;Initial Catalog=TH_Scaffolding;User ID=sa;Password=P@ssw0rd" providerName="System.Data.SqlClient" />
+    <add name="ScaffoldingEntities" connectionString="Data Source=adg-china-thailand.database.windows.net; Initial Catalog=scaffolding;User ID=adgchina.thailand;Password=P@ssw0rd" providerName="System.Data.SqlClient" />
+    <add name="ScaffoldingLogEntities" connectionString="Data Source=adg-china-thailand.database.windows.net; Initial Catalog=scaffolding;User ID=adgchina.thailand;Password=P@ssw0rd" providerName="System.Data.SqlClient" />
   </connectionStrings>
