--- a/Scaffolding.Api/packages.config
+++ b/Scaffolding.Api/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="Autofac" version="4.9.2" targetFramework="net461" />
-  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
-  <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net461" />
-  <package id="Autofac.Owin" version="4.2.0" targetFramework="net461" />
-  <package id="Autofac.WebApi2" version="4.2.1" targetFramework="net461" />
-  <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Autofac" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.Mvc5" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.Mvc5.Owin" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.Owin" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.Web" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.WebApi2" version="6.0.0" targetFramework="net472" />
+  <package id="Autofac.WebApi2.Owin" version="6.0.0" targetFramework="net472" />
   <package id="AutoMapper" version="8.1.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
@@ -32,6 +33,7 @@
   <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
@@ -49,7 +51,20 @@
   <package id="Npgsql" version="2.2.7" targetFramework="net461" />
   <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
